<?xml version="1.0" encoding="UTF-8"?><!--
  Copyright (C) 2012, 2013, 2014 University of Otago, Tonic Artos <tonic.artos@gmail.com>

  Otago PsyAn Lab is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program. If not, see <http://www.gnu.org/licenses/>.

  In accordance with Section 7(b) of the GNU General Public License version 3,
  all legal notices and author attributions must be preserved.
  -->

<resources>

    <string name="app_name">Otago PsyAn Lab</string>
    <string name="content_description_drag_handle">Drag Handle</string>
    <string name="content_description_remove_row">Remove Row</string>
    <string name="default_button_prop_name">Button Prop</string>
    <string name="default_condition_details">Condition unspecified</string>
    <string name="default_condition_name">Condition</string>
    <string name="default_image_prop_name">Image Prop</string>
    <string name="default_name_data_channel_field">Field %1$s</string>
    <string name="default_name_new_source_column">Column %1$s</string>
    <string name="default_name_new_action">Action %1$d</string>
    <string name="default_name_new_channel">Channel %1$d</string>
    <string name="default_name_new_csv">Data Sources %1$d</string>
    <string name="default_name_new_experiment">New Experiment</string>
    <string name="default_name_new_loop">Loop %1$d</string>
    <string name="default_name_new_question">Question %1$d</string>
    <string name="default_name_new_rule">Rule %1$d</string>
    <string name="default_name_new_scene">Scene %1$d</string>
    <string name="default_name_new_variable">Variable %1$d</string>
    <string name="default_name_prop">New Prop</string>
    <string name="designer_tab_assets">Media</string>
    <string name="designer_tab_data_channels">Data Channels</string>
    <string name="designer_tab_data_sources">Data Sources</string>
    <string name="designer_tab_generators">Generators</string>i
    <string name="designer_tab_program">Program</string>
    <string name="designer_tab_properties">Properties</string>
    <string name="designer_tab_subject">Landing Page</string>
    <string name="designer_tab_variables">Variables</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="error_expected_operator">Expected operator.</string>
    <string name="file_header_experiments">Experiments</string>
    <string name="format_asset_class_name">%1$s</string>
    <string name="format_call_operand_value">Call «%2$s» on %1$s</string>
    <string name="format_condition_details">Rule will execute if the following is true at point of evaluation.\n\n %1$s</string>
    <string name="format_error_importing">Errors were encountered while reading %s.</string>
    <string name="format_generator_class_name">%1$s</string>
    <string name="format_header_record_count">%d records</string>
    <string name="format_loop_class_name">%1$s</string>
    <string name="format_number_range">range: %1$d — %2$d</string>
    <string name="format_prop_class_name">%1$s</string>
    <string name="format_property_label">%s</string>
    <string name="format_scene_class_name">%1$s</string>
    <string name="format_screen_dimensions">%1$d×%2$d</string>
    <string name="format_source_method_name">Get %1$s</string>
    <string name="format_stage_detail">%1$d×%2$d (%3$s) %4$d props</string>
    <string name="generator_kind_random">random</string>
    <string name="generator_kind_shuffle">shuffle</string>
    <string name="header_csv_data">CSV Data</string>
    <string name="header_fonts">Fonts</string>
    <string name="header_images">Images</string>
    <string name="header_sounds">Sound Files</string>
    <string name="header_videos">Videos</string>
    <string name="image_desc_drag_handle">Drag Handle</string>
    <string name="image_desc_remove_question">Remove</string>
    <string name="message_auth_failure">Sorry, try again.</string>
    <string name="message_clear_operand">Clear variable \'%1$s\'?</string>
    <string name="message_error">An error has occurred.</string>
    <string name="message_name_empty">The user must have a name.</string>
    <string name="message_password_mismatch">Password mismatch.</string>
    <string name="message_password_required">You need to enter a password</string>
    <string name="method_get_text">Get Text</string>
    <string name="note_experiment_no_authors">No authors given</string>
    <string name="note_experiment_no_description">No experiment description.</string>
    <string name="note_experiment_no_name">Missing experiment title</string>
    <string name="operand_type_any_except_asset">any</string>
    <string name="operand_type_boolean">Boolean</string>
    <string name="operand_type_float">Float</string>
    <string name="operand_type_image">Image</string>
    <string name="operand_type_integer">Integer</string>
    <string name="operand_type_number">Number</string>
    <string name="operand_type_sound">Sound</string>
    <string name="operand_type_string">String</string>
    <string name="operand_type_unknown">Unknown type</string>
    <string name="operand_type_video">Video</string>
    <string name="option_no">No</string>
    <string name="option_yes">Yes</string>
    <string name="record_section_header">Collected Records</string>
    <string name="section_title_experiments">EXPERIMENTS</string>
    <string name="subtitle_fmt_num_items_selected">%d items selected</string>
    <string name="subtitle_one_item_selected">One item selected</string>
    <string name="symbol_required">*</string>
    <string name="text_date_never">never</string>
    <string name="text_delete_user_warning">User and all the associated data will be deleted permanently.</string>
    <string name="text_required_infotext">*required</string>
    <string name="text_stage_undefined">Stage not created.</string>
    <string name="warning_missing_password">Please set password</string>
    <string name="warning_password_mismatch">Passwords do not match</string>

    <plurals name="expected_type">
        <item quantity="one">Expected type %s</item>
        <item quantity="other">Expected types %s</item>
    </plurals>
    <plurals name="got_type">
        <item quantity="one">got type %s</item>
        <item quantity="other">got types %s</item>
    </plurals>

    <string name="message_exit_designer">Are you sure you want to exit? Exiting the designer now will save all changes up to this point. To discard changes please select the discard option from the menu.</string>
    <string name="label_question">Question</string>
    <string name="label_question_is_required">is required</string>
    <string name="hint_question_name">Question name</string>
    <string name="label_question_kind">Kind</string>
    <string name="label_options">Options</string>
    <string name="label_hint">Hint</string>
    <string name="hint_input_hint">Input hint</string>
    <string name="label_option_one">First</string>
    <string name="label_option_two">Second</string>
    <string name="title_new_option">New Option</string>
    <string name="title_edit_option">Edit Option</string>
    <string name="hint_option_two">No</string>
    <string name="hint_option_one">Yes</string>
    <string name="default_entry_option_yes">Yes</string>
    <string name="default_entry_option_no">No</string>
    <string name="label_filesize">Filesize</string>
    <string name="label_filename">Filename</string>
    <string name="title_source_file">Source File</string>
    <string name="hint_source_name">Source name</string>
    <string name="title_new_string">New String</string>
    <string name="title_new_column_name">New Column Name</string>
    <string name="hint_column_name">Column Name</string>
    <string name="title_edit_string">Edit String</string>
    <string name="label_parameter_row">Row</string>
    <string name="label_linked_data_source">Data Source</string>
    <string name="default_text_iterations">1</string>
    <string name="default_text_unlinked_data_source">Unlinked</string>
    <string name="format_title_link_loop_data_source">Link Data Source for %1$s</string>
    <string name="option_no_link_loop_data_source">No linked data source</string>
    <string name="label_stepping_kind_shuffle">Shuffle</string>
    <string name="label_stepping_kind_sequential">Sequential</string>
    <string name="label_stepping_kind_random">Random</string>

    <string name="text_loop_iterations_infinite">Until Escaped</string>
    <string name="text_no_linked_loop_data_source">None Linked</string>
    <string name="label_loop_stepping_kind">Stepping Kind</string>
    <string name="title_loop_properties">Properties</string>
    <string name="title_timers">Timers</string>
    <string name="method_timer_start">Start</string>
    <string name="method_timer_stop">Stop</string>
    <string name="default_name_new_timer">Timer %1$s</string>
    <string name="label_prop_text">Text Prop</string>
    <string name="label_prop_image">Image Prop</string>
    <string name="label_prop_video">Video Prop</string>
    <string name="label_prop_button">Button Prop</string>
    <string name="label_prop_seekbar">Seekbar Prop</string>
    <string name="label_timer">Timer</string>
    <string name="label_timer_reset">Reset Timer</string>
    <string name="label_timer_periodic">Periodic Timer</string>
    <string name="label_generator_random">Random</string>
    <string name="label_generator_shuffle">Shuffle</string>
    <string name="format_timer_wait_value">%1$dms</string>
    <string name="format_timer_iterations">%1$d times</string>
    <string name="title_dialogue_edit_timer">Edit Timer</string>
    <string name="title_dialogue_new_timer">New Timer</string>
    <string name="label_timer_name">Name</string>
    <string name="hint_timer_name">Timer name</string>
    <string name="label_timer_kind">Kind</string>
    <string name="label_timer_wait_value">Wait</string>
    <string name="hint_timer_wait_value">Milliseconds</string>
    <string name="label_timer_iterations">Iterations</string>
    <string name="hint_timer_iterations">Times to repeat</string>
    <string name="text_timer_infinite">Until Stopped</string>
    <string name="label_timer_kind_periodic">Periodic</string>
    <string name="label_timer_kind_reset">Reset</string>
    <string name="event_trigger">On Trigger</string>

</resources>