<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dip"
    android:columnCount="3"
    android:paddingLeft="16dip"
    android:useDefaultMargins="false" >

    <TextView
        android:layout_gravity="center_vertical|start"
        android:fontFamily="sans-serif-light"
        android:paddingRight="8dip"
        android:text="@string/label_prop_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/name"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginRight="16dip"
        android:hint="@string/hint_question_name"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:minHeight="48dip"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <TextView
        android:layout_gravity="center_vertical|start"
        android:fontFamily="sans-serif-light"
        android:paddingRight="8dip"
        android:text="@string/label_question_kind"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/kind"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginRight="16dip" />

    <TextView
        android:layout_gravity="center_vertical|start"
        android:fontFamily="sans-serif-light"
        android:paddingRight="8dip"
        android:text="@string/label_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/hint"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginRight="16dip"
        android:hint="@string/hint_input_hint"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:minHeight="48dip"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <TextView
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:fontFamily="sans-serif-light"
        android:paddingBottom="16dip"
        android:paddingTop="32dip"
        android:text="@string/label_question"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/required"
        android:layout_gravity="right"
        android:layout_marginRight="16dip"
        android:text="@string/label_question_is_required" />

    <EditText
        android:id="@+id/text"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="32dip"
        android:layout_marginRight="16dip"
        android:hint="@string/hint_subject_question"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:minHeight="48dip"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <TextView
        android:layout_columnSpan="2"
        android:layout_gravity="center_vertical"
        android:fontFamily="sans-serif-light"
        android:text="@string/label_options"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <FrameLayout
        android:id="@+id/add"
        android:layout_gravity="right|center_vertical"
        android:background="@drawable/card_item_background_holo_light"
        android:padding="16dip" >

        <TextView
            android:id="@+id/text_add"
            style="@style/header_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/action_add_new" />
    </FrameLayout>

</GridLayout>