<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012, 2013, 2014 University of Otago, Tonic Artos <tonic.artos@gmail.com>

  Otago PsyAn Lab is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program. If not, see <http://www.gnu.org/licenses/>.

  In accordance with Section 7(b) of the GNU General Public License version 3,
  all legal notices and author attributions must be preserved.
  -->

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:useDefaultMargins="false" >

    <TextView
        android:layout_gravity="center_vertical|start"
        android:fontFamily="sans-serif-light"
        android:paddingRight="8dip"
        android:text="@string/label_prop_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/name"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/hint_question_name"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:minHeight="48dip"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <TextView
        android:layout_gravity="center_vertical|start"
        android:fontFamily="sans-serif-light"
        android:paddingRight="8dip"
        android:text="@string/label_question_kind"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/kind"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_gravity="center_vertical|start"
        android:fontFamily="sans-serif-light"
        android:paddingRight="8dip"
        android:text="@string/label_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/hint"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/hint_input_hint"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:minHeight="48dip"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <TextView
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:fontFamily="sans-serif-light"
        android:paddingBottom="16dip"
        android:paddingTop="32dip"
        android:text="@string/label_question"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/required"
        android:layout_gravity="right"
        android:text="@string/label_question_is_required" />

    <EditText
        android:id="@+id/text"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/hint_subject_question"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:minHeight="48dip"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

</GridLayout>